--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend_prepproject",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
